# CameraSample

./: README.md  gradle.properties  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/camerasample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFAudioEncoder.cpp  FFAudioEncoder.h  RenderVideo.cpp  RenderVideo.h  VideoEncoder.cpp  VideoEncoder.h  log.h
app/src/main/java/com/example/camerasample/: AudioCapture.java  BaseEncoder.java  CameraTextureSurfaceActivity.java  CameraTextureViewActivity.java  FFAudioEncoder.java  FFVideoEncoder.java  HWAudioEncoder.java  HWVideoEncoder.java  LogUtils.java  MainActivity.java  MediaDataCallback.java  Utils.java
app/src/main/java/com/example/camerasample/camera/: CameraRender.java  CommonHandlerListener.java
app/src/main/java/com/example/camerasample/filters/: BaseFilter.java  LutColorFilter.java
app/src/main/java/com/example/camerasample/gl/: Drawable2d.java  EglCore.java  EglSurfaceBase.java  FullFrameRect.java  GlUtil.java  Texture2dProgram.java  WindowSurface.java
app/src/main/java/com/example/camerasample/widget/: CameraSurfaceView.java
app/src/main/res/layout/: activity_main.xml  layout_surfaceview.xml
app/src/main/res/raw/: fragment_shader_base.glsl  fragment_shader_lut.glsl  fragment_shader_lut_small.glsl  vertex_shader_base.glsl
gradle/wrapper/: gradle-wrapper.properties
